--- a/Prediction_using_Supervised_ML.ipynb
+++ b/Prediction_using_Supervised_ML.ipynb
@@ -56,7 +56,8 @@
       "source": [
         "**Approach**:\n",
         "\n",
-        "matplotlib and seaborn for EDA and model training using Linear Regression."
+        "Matplotlib and seaborn for EDA and model training using Linear Regression."
+        "# Author: Saurabh Prakash Giri"
       ]
     },
     {
